--- a/10/EcoDriving/EcoDriving/Views/Home/Index.cshtml
+++ b/10/EcoDriving/EcoDriving/Views/Home/Index.cshtml
@@ -12,4 +12,4 @@
 }
 
 <h2>Home</h2>
-s
+<h3>Witaj na stronie głownej, przejdź do zakładki "Kursanci" aby wybrać kursanta i rozpocząć analizę. <br/>Pozdrawiam Chmua!</h3>
