--- a/10/EcoDriving/EcoDriving/Views/Home/People.cshtml
+++ b/10/EcoDriving/EcoDriving/Views/Home/People.cshtml
@@ -6,44 +6,49 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>People</h2>
+<h2>Kursanci</h2>
 
-@using (Html.BeginForm("People", "Home", FormMethod.Get))
+@using (Html.BeginForm("People", "Home", FormMethod.Post))
 {
+    <h3>Dodaj kursanta:</h3>
     <div>
         @Html.LabelFor(model => model.Name)
         @Html.TextBoxFor(model => model.Name)
+    </div>
+    <div>
+        @Html.LabelFor(model => model.Surname)
+        @Html.TextBoxFor(model => model.Surname)
+    </div>
+    
+    <input type="submit" class="ui-button" name="Confirm" value="@Translations.Confirm" />
+}
+
+@using (Html.BeginForm("People", "Home", FormMethod.Get))
+{
+    <h3>Szukaj kursanta:</h3>
+    <div>
+        @Html.LabelFor(model => model.Name)
+        @Html.TextBoxFor(model => model.Name)
+        
+        <br/>
 
         @Html.LabelFor(model => model.Surname)
         @Html.TextBoxFor(model => model.Surname)
     </div>
     
-    <input type="submit" class="" name="Search" value="@Translations.Search" />
+    <input type="submit" class="ui-button" name="Search" value="@Translations.Search" />
 }
 
 <table>
     @if (Model.SearchResults != null)
     {
+        <br/>
+        <tr><td>Wybór</td><td>ID</td><td>Imie</td><td>Nazwisko</td></tr>
         foreach (var item in @Model.SearchResults)
         {
-            @Html.Raw(string.Format("<tr><td>{0}</td><td>{1}</td><td>{2}</td><td>{3}</td></tr>", string.Format("{0}/{1}", Html.ActionLink(Translations.Choose, "PeopleChoose", "Home"), item.Id), item.Id, item.Name, item.Surname)) 
+            @Html.Raw(string.Format("<tr><td>{0}</td><td>{1}</td><td>{2}</td><td>{3}</td></tr>", Html.ActionLink(Translations.Choose, "PeopleChoose", new { id = item.Id}), item.Id, item.Name, item.Surname))
         }
     }
 </table>
-
-@using (Html.BeginForm("People", "Home", FormMethod.Post))
-{
-    <div>
-        @Html.LabelFor(model => model.Name)
-        @Html.TextBoxFor(model => model.Name)
-    </div>
-    <div>
-        @Html.LabelFor(model => model.Surname)
-        @Html.TextBoxFor(model => model.Surname)
-    </div>
-    
-    <input type="submit" class="" name="Confirm" value="@Translations.Confirm" />
-}
-
 
 
