--- a/10/EcoDriving/EcoDriving/Views/Shared/_Layout.cshtml
+++ b/10/EcoDriving/EcoDriving/Views/Shared/_Layout.cshtml
@@ -1,23 +1,50 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
-    @RenderSection("JavaScript", required: false)
-    @Scripts.Render("~/bundles/modernizr")
-</head>
-    <body>
-        <div>
-            @Html.ActionLink("Home", "Index", "Home")
-            @Html.ActionLink("People", "people", "Home")
-            @Html.ActionLink("Charts", "charts", "Home")
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>@ViewBag.Title</title>
+         @Styles.Render("~/Content/css")
+        @RenderSection("JavaScript", required: false)
+        @Scripts.Render("~/bundles/modernizr")
 
-        </div>
-        @RenderBody()
-
-        @Scripts.Render("~/bundles/jquery")
+        <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+        <link href="~/Content/themes/base/jquery-ui.css" type="text/css" rel="stylesheet" />
+    
+        <script src="~/Scripts/jquery-1.8.2.min.js"></script>
+        <script src="~/Scripts/jquery-ui-1.9.2.js" type="text/javascript"></script>
+        <script src="~/Scripts/EcoDrive.js" type="text/javascript"></script>
+            
         @RenderSection("scripts", required: false)
-    </body>
+    </head>
+
+<body>
+    <div class="page">
+
+        <div id="header" style="height: 165px; display: block">
+            <table>
+            <tr><td>
+                    <img src="@Url.Content("~/Content/images/banner.jpg")" alt="EcoDrive" />
+                </td></tr>
+            <tr><td>               
+                    <ul id="menu">
+                        <li>@Html.ActionLink("GŁÓWNA", "Index", "Home")</li>
+                        <li>@Html.ActionLink("ZARZĄDZAJ", "people", "Home")</li>
+                        <li>@Html.ActionLink("ANALIZA", "charts", "Home")</li>
+                    </ul>                
+                </td></tr>
+                </table>
+        </div>
+
+        <div id="main">
+            @RenderBody()
+            <div id="footer">   
+            @RenderSection("Footer", false)          
+            </div>
+        </div>
+    </div>
+</body>
 </html>
+
+
