Lastest analyza and DB

--- a/10/EcoDriving/EcoDriving/Content/Site.css
+++ b/10/EcoDriving/EcoDriving/Content/Site.css
@@ -176,6 +176,14 @@ ul#menu li.selected a
     float: right;
 }
 
+.ziel {
+    color: #32cd32;
+}
+
+.czerw {
+    color: #ff0000;
+}
+
 .ui-selectable {
     width: 200px;
     padding: 4px 10px;
